# sudoku

./: .gitignore  LICENSE  README.md  pyproject.toml
cc/: CMakeLists.txt
cc/src/: ndarray.c  ndarray.h  sudoku.c  sudoku.h
examples/: easy_001.txt  evil_001.txt  evil_002.txt  expert_001.txt  expert_002.txt  hard_002.txt  medium_001.txt  non_unique_001.txt  non_unique_002.txt
puzzles/: easy_002.txt  hard_001.txt  hard_003.txt  medium_002.txt
py/: pyproject.toml
py/src/: sudoku.py
src/: sudoku.py  sudoku_v2.py
test/: test_sudoku.py
