[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = ""
authors = ["Gilbert Francois Duivesteijn <info@gilbertfrancois.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pdbpp = "^0.10.3"



[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
black = "^22.12.0"
isort = "^5.11.4"
pylint = "^2.15.9"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
