[tool.poetry]
name = "sudoku-solver"
version = "1.0.0"
description = "Sudoku Solver"
authors = ["Gilbert Francois Duivesteijn <gilbert@deep-impact.ch>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "sudoku_solver"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
black = "^22.12.0"
isort = "^5.11.4"
pylint = "^2.15.10"
pytest = "^7.2.0"
coverage = "^7.0.4"
debugpy = "^1.6.5"
cython = "^3.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
# Let black take care of formatting
max-line-length = 1024  
# No docstring for this small project
